frontend/tests/cases/negative/badSynFunTyAsConstraint.gr
-- 'a -> b' is not a syntactically valid constraint
foo : forall {a : Type, b : Type} . {(a -> b)} => a -> a
foo x = x
